# ChangeLog for dev-util/qtunit
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/qtunit/Attic/ChangeLog,v 1.4 2002/03/15 17:24:10 gbevin Exp $

*qtunit-0.9.6 (15 Mar 2002)

  15 Mar 2002; G.Bevin <gbevin@gentoo.org> qtunit-0.9.6.ebuild,
  files/digest-qtunit-0.9.6 :
  
  Upgraded to latest version.
  
*qtunit-0.9.5 (1 Mar 2002)

  1 Mar 2002; G.Bevin <gbevin@gentoo.org> qtunit-0.9.5.ebuild,
  files/digest-qtunit-0.9.5 :
  
  Upgraded to latest version.
  Removed installation of 'standalonerunner'.
  
*qtunit-0.9.4 (28 Feb 2002)

  28 Feb 2002; G.Bevin <gbevin@gentoo.org> qtunit-0.9.4.ebuild,
  files/digest-qtunit-0.9.4 :
  
  Upgraded to latest version.
  
*qtunit-0.9.3 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.